css/FCCproject3.css
:root {
  /* hue, saturation(%), lightness(%) GRAYS */
  --gray-100: hsl(0, 0%, 13%);
  --gray-200: hsl(0, 0%, 31%);
  --gray-300: hsl(0, 0%, 48%);
  --gray-400: hsl(0, 0%, 74%);
  --gray-500: hsl(0, 0%, 98%);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: 'Lato';
}

body {
  display: flex;
  flex-direction: column;
  height:100vh;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  position: fixed;
	padding-top: .4em;
	padding-bottom: .4em;
	background-color: #f4f4f4;
  font-family: 'Mulish', sans-serif;
}

ul {
  list-style: none;
}

.header-logo {
  display: flex;
  align-items:center;
  margin-left: 1em;
}

#header-img {
  width: 100px;
}

#header-txt-logo {
  font-size: 1.3rem;
}

.nav-list {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  margin-right: 1rem;
}

#header-img,
.nav-link a {
	padding: 1rem 2rem;
	text-transform: uppercase;
	text-align: center;
	display: block;
}

.nav-link a {
	color: #34495e;
	font-size: 0.95em;
}

.nav-link a:hover {
	color: #718daa;
}

header a {
	color: #34495e;
  text-decoration: none;
}

.container {
  display: flex;
  justify-content: center;
  padding: 3rem 7rem 3rem 7rem;
  background: cyan;
}

#video {
  max-width: 80%;
  height: auto;
}

h2, h3, h4, h5{
  font-size: 2rem;
  font-family: 'Mulish';
  margin-bottom: 1rem;
}

section {
  padding: 2rem 3rem 4rem 3rem;
  margin: 0rem 7rem 0rem 7rem;
}

article {
  margin-bottom: 5rem;
}

#lejardin-article-3, #contact article, #informations article {
  margin-bottom: 0rem;
}

section p, section li, figcaption {
  font-size: 1rem;
}

figcaption {
  font-style: italic;
  margin-top: .3rem;
  margin-bottom: 2rem;
  color: gray;
}

#lejardin {
  background: lightpink;
}

#lejardin img {
  width: 100%;
  margin: auto;
}

#gallerie {
  background: lightgreen;
}

img {
  vertical-align: middle;
}

/* Position the image container (needed to position the left and right arrows) */
.container-slideshow {
  position: relative;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

.mySlides img {
  width: 1120px; /* width of container */
  height: 562px; /* height of container */
  object-fit: cover;
}

/* Add a pointer when hovering over the thumbnail images */
.cursor {
  cursor: pointer;
}

/* Next & previous buttons */
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 40%;
  width: auto;
  padding: 16px;
  margin-top: -50px;
  color: white;
  font-weight: bold;
  font-size: 20px;
  border-radius: 0 3px 3px 0;
  user-select: none;
  -webkit-user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 0.8rem;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* Container for image text */
.slideshow-caption-container {
  text-align: center;
  background-color: #222;
  padding: 0.5rem;
  color: white;
}

.slideshow-row:after {
  content: "";
  display: table;
  clear: both;
}

/* Six columns side by side */
.slideshow-column {
  float: left;
  width: 16.66%;
}

/* Add a transparency effect for thumnbail images */
.slideshow-demo {
  opacity: 0.6;
}

.active,
.slideshow-demo:hover {
  opacity: 1;
}

.slideshow-demo {
  width: 187px; /* width of container */
  height: 111px; /* height of container */
  object-fit: cover;
}

#informations {
  background: Papayawhip;
}

#contact {
  background: lightblue;
}

form {
  margin-top: 2rem;
  margin-bottom: 3rem;
}

.small {
  margin-left: 0.1rem;
  color: red;
}

textarea {
  padding: 10px 10px;
  border-radius: 5px;
}

footer {
  display: flex;
  flex-direction: column;
  margin-top: auto;
  background: var(--gray-100);
  color: white;
  font-family: 'Mulish', sans-serif;
}

.footer-list {
  display: flex;
  justify-content: flex-end;
}

.footer-link a {
	padding: 1rem 2rem;
	text-align: center;
	display: block;
}

#contact a, footer a {
	color: white;
  text-decoration: none;
}

#contact a {
  color: gray;
}

#copyright {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding: 1rem 2rem;
  background: lightgray;
  color: gray;
}

.scroll-to-top {
  position: fixed;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: black;
  font-size: 22px;

  bottom: 8rem;
  right: 50px;

  text-decoration: none;
  text-align: center;
  line-height: 50px;
}

/* =================================
          Media Queries
==================================== */

@media (max-width: 929px) {

  header {
    display: flex;
    flex-direction: column;
  }

  .header-logo {
    margin: 0 0 0.5rem 0;
    display: flex;
    flex-direction: column;
  }

  #header-txt-logo {
    font-size: 1.5rem;
  }

  #header-img {
    width: 125px;
  }

	.nav-list {
    margin: 0 0 0 0;
		display: flex;
    flex-direction: column;
	}

  .nav-link a {
  	font-size: 1em;
    padding: 0.3rem 2rem;
  }

  #video {
    max-width: 110%;
    height: auto;
  }

  h2, h3, h4, h5{
    font-size: 1.8rem;
  }

  section p, section li, figcaption {
    font-size: 1.2rem;
  }

  section {
    padding: 2rem 5rem 4rem 5rem;
    margin: 0;
  }

  article {
    margin-bottom: 5rem;
  }

  .mySlides img {
    width: 608px; /* width of container */
    height: 400px; /* height of container */
  }

  #slideshow-caption {
    font-size: 0.9rem;
  }

  .footer-list, #copyright {
    justify-content: center;
  }

  .scroll-to-top {
    width: 40px;
    height: 40px;
    line-height: 40px;
    font-size: 20px;

    bottom: 10rem;
    right: 20px;
  }
}

@media (max-width: 376px) {

  section {
    margin: 0;
  }

}

/*

<p>Retrouvez dans cette page, tous les moyens pour nous contacter, selon vos besoins que vous soyez un particulier, un professionnel.</p></br>
<p>Si vous souhaitez :</p></br>
  <li>vous renseigner sur le musée ou les collections (jardin et autochromes) : <a href="#">museealbertkahn@hauts-de-seine.fr</a></li>
  <li>réserver un atelier ou une visite : <a href="#">accueilmak@hauts-de-seine.fr</a></li>
  <li>réserver un atelier ou une visite pour des scolaires : <a href="#">museekahn-scolaire@hauts-de-seine.fr</a></li>
  <li>privatiser le jardin pour un évènement : <a href="#">vdelacour@hauts-de-seine.fr  </a></li></br>
<p>Si vous êtes journaliste, pour toutes vos demandes presse ou demande d'autorisation de tournage, contactez le service de presse du Département : <a href="#">https://www.hauts-de-seine.fr/contact-service-presse</a></p></br>
</article>
<article id="contact-article-2">
<h5>Utilisation des images</h5>
<p>Leur réutilisation est autorisée dans le cadre d’un usage strictement non commercial tel que précisé à la page réutilisation :</br><a href="#">https://opendata.hauts-de-seine.fr/page/licence-adlp/</a></p></br>
<p>Si vous souhaitez utiliser les images en haute définition ou les films des collections dans des publications, expositions ou autres productions, vous devez en faire la demande par mail à <a href="#">museekahn@hauts-de-seine.fr</a> en apportant les éléments les plus complets possibles sur l’utilisation envisagée, le contexte d’exploitation et le calendrier.</p></br>
<p><strong>Merci de bien vouloir noter que ne sommes pas actuellement en mesure de donner suite aux demandes d’images ou de films pour un usage commercial.</strong></p>
</article>

 */

